force-app/main/default/objects/Location_Tracing__c/Location_Tracing__c.object-meta.xml
<CustomObject>
    <label>Location Tracing</label>
    <nameField>
        <displayFormat>LT-{0000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Location Tracing</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>